--- a/pages/azioni/enel.html
+++ b/pages/azioni/enel.html
@@ -33,20 +33,19 @@
 
 <body>
     <!--Header-->
-    <!--Header-->
     <header class="p-2 border-bottom contaner bg-danger">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between">
                 <!--Logo app-->
-                <a href="Dashboard.html"
+                <a href="../index.html"
                     class="d-flex align-items-center mb-2 mb-lg-0 link-body-emphasis text-decoration-none">
                     <!--Icona in alto a sinistra che riporta alla dashboard-->
-                    <i class="bi bi-house-door-fill"></i>
+                    <i class="bi bi-door-open"></i>
 
                 </a>
                 <!--Titolo-->
                 <h4 class="mb-0">S.A.R.A.</h4>
-                <a href="infoProfilo.html" class="d-block link-body-emphasis text-decoration-none"
+                <a href="../infoProfilo.html" class="d-block link-body-emphasis text-decoration-none"
                     aria-expanded="false">
                     <i class="bi bi-person-circle" style="font-size:1.5em"></i> <!--iCONA DEL PROFILO-->
                 </a>
@@ -54,7 +53,7 @@
             </div>
         </div>
     </header>
-    <img src="./immagini/unicreditbackground.png" class="rounded mx-auto d-block" width="150px">
+    <img src="../immagini/unicreditbackground.png" class="rounded mx-auto d-block" width="150px">
 
 
 
@@ -69,38 +68,37 @@
                     <!--Gestione navbar attraverso classi nav e item-->
 
                     <li class="nav-item">
-                        <a class="nav-link" href="Dashboard.html">Home</a> <!--Link alle pagine-->
+                        <a class="nav-link" href="../Dashboard.html">Home</a> <!--Link alle pagine-->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="operazioni.html">Operazioni</a> <!--Link alle pagine-->
+                        <a class="nav-link" href="../operazioni.html">Operazioni</a> <!--Link alle pagine-->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="conto.html">Conto </a>
+                        <a class="nav-link" href="../conto.html">Conto </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="statistiche.html">Statistiche</a>
+                        <a class="nav-link" href="../statistiche.html">Statistiche</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="chisiamo.html">Chi siamo?</a>
+                        <a class="nav-link" href="../chisiamo.html">Chi siamo?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="appmobile.html">Scarica App </a>
+                        <a class="nav-link" href="../appmobile.html">Scarica App </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="card.html">La tua card</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="listacard.html">Le tue carte</a>
+                        <a class="nav-link" href="../card.html">La tua card</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="assistenza.html">Assistenza</a>
+                        <a class="nav-link" href="../listacard.html">Le tue carte</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="promozioni.html">Promozioni</a>
+                        <a class="nav-link" href="../assistenza.html">Assistenza</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="azioni.html">Azioni</a>
+                        <a class="nav-link" href="../promozioni.html">Promozioni</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../azioni.html">Azioni</a>
                     </li>
                 </ul>
             </div>
@@ -129,8 +127,8 @@
                     <td id="azioniDisponibiliId">
                         100
                     </td>
-                    <td id="costoAzioneId">
-                        7 &euro;
+                    <td>
+                        <span id="costoAzioneId" >7</span> &euro;
                     </td>
                 </tr>
             </tbody>
