--- a/pages/azioni.html
+++ b/pages/azioni.html
@@ -38,10 +38,10 @@
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between">
                 <!--Logo app-->
-                <a href="Dashboard.html"
+                <a href="../index.html"
                     class="d-flex align-items-center mb-2 mb-lg-0 link-body-emphasis text-decoration-none">
                     <!--Icona in alto a sinistra che riporta alla dashboard-->
-                    <i class="bi bi-house-door-fill"></i>
+                    <i class="bi bi-door-open"></i>
 
                 </a>
                 <!--Titolo-->
