--- a/pages/azioni/apple.html
+++ b/pages/azioni/apple.html
@@ -12,7 +12,7 @@
     <!--Titolo pagina-->
     <title>S.A.R.A.</title>
     <!---->
-    <link rel="icon" type="image/x-icon" href="./immagini/logounicredit.png">
+    <link rel="icon" type="image/x-icon" href="../immagini/logounicredit.png">
     <!--Icone di bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -31,22 +31,22 @@
 
 </head>
 
-<body>
+<body onload="aggiorna()">
     <!--Header-->
     <!--Header-->
     <header class="p-2 border-bottom contaner bg-danger">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between">
                 <!--Logo app-->
-                <a href="Dashboard.html"
+                <a href=".../index.html"
                     class="d-flex align-items-center mb-2 mb-lg-0 link-body-emphasis text-decoration-none">
                     <!--Icona in alto a sinistra che riporta alla dashboard-->
-                    <i class="bi bi-house-door-fill"></i>
+                    <i class="bi bi-door-open"></i>
 
                 </a>
                 <!--Titolo-->
                 <h4 class="mb-0">S.A.R.A.</h4>
-                <a href="infoProfilo.html" class="d-block link-body-emphasis text-decoration-none"
+                <a href="../infoProfilo.html" class="d-block link-body-emphasis text-decoration-none"
                     aria-expanded="false">
                     <i class="bi bi-person-circle" style="font-size:1.5em"></i> <!--iCONA DEL PROFILO-->
                 </a>
@@ -54,7 +54,7 @@
             </div>
         </div>
     </header>
-    <img src="./immagini/unicreditbackground.png" class="rounded mx-auto d-block" width="150px">
+    <img src="../immagini/unicreditbackground.png" class="rounded mx-auto d-block" width="150px">
 
 
 
@@ -69,38 +69,37 @@
                     <!--Gestione navbar attraverso classi nav e item-->
 
                     <li class="nav-item">
-                        <a class="nav-link" href="Dashboard.html">Home</a> <!--Link alle pagine-->
+                        <a class="nav-link" href="../Dashboard.html">Home</a> <!--Link alle pagine-->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="operazioni.html">Operazioni</a> <!--Link alle pagine-->
+                        <a class="nav-link" href="../operazioni.html">Operazioni</a> <!--Link alle pagine-->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="conto.html">Conto </a>
+                        <a class="nav-link" href="../conto.html">Conto </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="statistiche.html">Statistiche</a>
+                        <a class="nav-link" href="../statistiche.html">Statistiche</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="chisiamo.html">Chi siamo?</a>
+                        <a class="nav-link" href="../chisiamo.html">Chi siamo?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="appmobile.html">Scarica App </a>
+                        <a class="nav-link" href="../appmobile.html">Scarica App </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="card.html">La tua card</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="listacard.html">Le tue carte</a>
+                        <a class="nav-link" href="../card.html">La tua card</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="assistenza.html">Assistenza</a>
+                        <a class="nav-link" href="../listacard.html">Le tue carte</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="promozioni.html">Promozioni</a>
+                        <a class="nav-link" href="../assistenza.html">Assistenza</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="azioni.html">Azioni</a>
+                        <a class="nav-link" href="../promozioni.html">Promozioni</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../azioni.html">Azioni</a>
                     </li>
                 </ul>
             </div>
@@ -129,8 +128,8 @@
                     <td id="azioniDisponibiliId">
                         100
                     </td>
-                    <td id="costoAzioneId">
-                        172 &euro;
+                    <td>
+                        <span id="costoAzioneId">172</span> &euro;
                     </td>
                 </tr>
             </tbody>
@@ -139,16 +138,24 @@
         <div class="d-flex flex-row justify-content-center gap-3">
             <button type="button" class="btn btn-outline-success" onclick="compraAzione()" id="compraAzioneBtn">Compra
                 azione</button>
-            <button type="button" class="btn btn-outline-secondary" onclick="vendiAzione()" disabled id="vendiAzioneBtn">Vendi azione</button>
+            <button type="button" class="btn btn-outline-secondary" onclick="vendiAzione()" disabled
+                id="vendiAzioneBtn">Vendi azione</button>
         </div>
 
     </main>
 
     <script>
-        //inizializza valori
         let azioniComprate = 0
         let azioniDisponibili = 100
-        let costoAzione = 172
+        let costoAzione = parseFloat(document.getElementById('costoAzioneId'))
+
+        //inizializza valori
+        function aggiorna() {
+            azioniComprate = 0
+            azioniDisponibili = 100
+            costoAzione = parseFloat(document.getElementById('costoAzioneId'))
+        }
+        
         //funzione compra azione
         function compraAzione() {
             if (azioniDisponibili == 0) { //controllo su disponibilità azioni
@@ -171,14 +178,17 @@
                 bottone.classList.remove("btn-outline-secondary")
             }
             //aggiornamento valori
-            azioniDisponibili-- 
+            azioniDisponibili--
             azioniComprate++
             costoAzione += 10
             //scrittura su pagina html
             document.getElementById('azioniDisponibiliId').innerHTML = azioniDisponibili
             document.getElementById('azioniComprateId').innerHTML = azioniComprate
-            document.getElementById('costoAzioneId').innerHTML = costoAzione + '&euro;'
-        }   
+            document.getElementById('costoAzioneId').innerHTML = costoAzione
+            localStorage.setItem('azioniDisponibili', azioniDisponibili)
+            localStorage.setItem('azioniComprate', azioniComprate)
+            localStorage.setItem('costoAzione', costoAzione)
+        }
         //funzione vendi azione
         function vendiAzione() {
             if (azioniComprate == 0) {
@@ -200,6 +210,9 @@
             document.getElementById('azioniDisponibiliId').innerHTML = azioniDisponibili
             document.getElementById('azioniComprateId').innerHTML = azioniComprate
             document.getElementById('costoAzioneId').innerHTML = costoAzione + '&euro;'
+            localStorage.setItem('azioniDisponibili', azioniDisponibili)
+            localStorage.setItem('azioniComprate', azioniComprate)
+            localStorage.setItem('costoAzione', costoAzione)
         }
     </script>
 
