--- a/pages/operazioni/bonifico.html
+++ b/pages/operazioni/bonifico.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!--Stile pagina-->
     <link rel="stylesheet" href="./style.css">
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css" rel="stylesheet" />
@@ -25,7 +25,7 @@
 
 <body class="w-50 m-auto mt-5"> <!--Body con larghezza pari al 50% dello schermo, margine alto con valore 5-->
 
-    <form class="container d-flex flex-column">
+    <form class="container d-flex flex-column" >
         <!--Elemento form che gestisce gli elementi al suo interno come flex in colonna-->
         <h1 class="h3 mb-3 fw-normal">Bonifico</h1>
         <div class="form-floating mb-3">
@@ -51,13 +51,13 @@
             </label>
         </div>
 
-        <a class="btn btn-primary w-100 py-2" type="submit" onclick='aggiornaTotale(this)' href="../conto.html">Effettua
+        <a class="btn btn-primary w-100 py-2" onclick="aggiornaTotale()" href="../conto.html">Effettua
             Bonifico</a>
     </form>
-
-    <script src="../script.js"></script>
+    <script src="./aggiornaTotale.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
