--- a/pages/operazioni/ricaricaPrepagata.html
+++ b/pages/operazioni/ricaricaPrepagata.html
@@ -1,51 +1,51 @@
 <!doctype html>
 <html lang="it" data-bs-theme="auto">
 <!--Per maggiori informazioni vedi index.html, non mi va di commentare tutto :)-->
+
 <head>
-      <!--Metadati-->
-      <meta charset="UTF-8">
-      <meta name='description' content='Sito Web per StartupYourLife'>
-      <meta name='language' content='IT'>
-      <meta name='author' content='Davide Simone'>
-      <!--Titolo pagina-->
-      <title>Unicredit Contpage - Ricarica Prepagata</title>
-      <!--Icona-->
-      <link rel="icon" type="image/x-icon" href="./immagini/logounicredit.png">
-      <!--Icone di bootstrap-->
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-      <!--Stile pagina-->
-      <link rel="stylesheet" href="./style.css">
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css" rel="stylesheet" />
-  
+    <!--Metadati-->
+    <meta charset="UTF-8">
+    <meta name='description' content='Sito Web per StartupYourLife'>
+    <meta name='language' content='IT'>
+    <meta name='author' content='Davide Simone'>
+    <!--Titolo pagina-->
+    <title>Unicredit Contpage - Ricarica Prepagata</title>
+    <!--Icona-->
+    <link rel="icon" type="image/x-icon" href="./immagini/logounicredit.png">
+    <!--Icone di bootstrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--Stile pagina-->
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css" rel="stylesheet" />
+
 </head>
 
 <body class="w-50 m-auto mt-5"> <!--Body con larghezza pari al 50% dello schermo, margine alto con valore 5-->
-    <form class="container d-flex flex-column"> <!--Elemento form che gestisce gli elementi al suo interno come flex in colonna-->
+    <form class="container d-flex flex-column">
+        <!--Elemento form che gestisce gli elementi al suo interno come flex in colonna-->
         <h1 class="h3 mb-3 fw-normal">Ricarica Prepagata</h1>
         <select class="form-select mb-3">
             <option selected>Selezionare Prepagata</option>
             <option value="1">Prepagata 1 - IBAN 1232123213213</option>
             <option value="2">Prepagata 2 - IBAN 1232123213213</option>
             <option value="3">Prepagata 3 - IBAN 1232123213213</option>
-          </select>
-        <div class="form-floating mb-3"> 
+        </select>
+        <div class="form-floating mb-3">
             <input type="number" class="form-control" id="importo">
-            <label for="floatingInput" >Importo</label>
+            <label for="floatingInput">Importo</label>
         </div>
-        <a class="btn btn-primary w-100 py-2" type="submit" onclick='aggiornaTotale(this)' href="../conto.html">Ricarica</a> 
+        <a class="btn btn-primary w-100 py-2" type="submit" onclick='aggiornaTotale(this)'
+            href="../conto.html">Ricarica</a>
     </form>
 
+    <script src="./aggiornaTotale.js"></script>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-<script src="../script.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="aggiornaTotale.js"></script>
 </body>
 
 </html>
-
-<!--
-    La pagina non salva i dati inseriti per il trattamento dei dati che a noi non è possibile fare
--->
