--- a/pages/azioni/apple.html
+++ b/pages/azioni/apple.html
@@ -105,6 +105,7 @@
             </div>
         </div>
     </nav>
+
     <main>
         <table class="table">
             <thead>
@@ -145,15 +146,15 @@
     </main>
 
     <script>
-        let azioniComprate = 0
-        let azioniDisponibili = 100
-        let costoAzione = parseFloat(document.getElementById('costoAzioneId'))
+        let azioniComprate
+        let azioniDisponibili
+        let costoAzione
 
         //inizializza valori
         function aggiorna() {
             azioniComprate = 0
             azioniDisponibili = 100
-            costoAzione = parseFloat(document.getElementById('costoAzioneId'))
+            costoAzione = 172
         }
         
         //funzione compra azione
@@ -177,6 +178,13 @@
                 bottone.classList.add("btn-outline-danger")
                 bottone.classList.remove("btn-outline-secondary")
             }
+            let conto = localStorage.getItem('contoSelezionato')
+            let saldo = localStorage.getItem('conto'+conto)
+            if(costoAzione>saldo){
+                alert("Saldo sul conto insufficiente")
+                return
+            }
+            saldo -= costoAzione
             //aggiornamento valori
             azioniDisponibili--
             azioniComprate++
@@ -188,6 +196,7 @@
             localStorage.setItem('azioniDisponibili', azioniDisponibili)
             localStorage.setItem('azioniComprate', azioniComprate)
             localStorage.setItem('costoAzione', costoAzione)
+            localStorage.setItem('conto'+conto, saldo)
         }
         //funzione vendi azione
         function vendiAzione() {
