--- a/pages/azioni.html
+++ b/pages/azioni.html
@@ -108,7 +108,7 @@
     </nav>
     <main align="center">
 
-        <font align="center" color="#00ff7f" size="30%">Azioni disponibili:</font><br /><br />
+        <h1 style="align-self: center; color:#00ff7f; font-size:3vw">Azioni disponibili:</h1>
 
         <table border="0" cellpadding="2%" cellspacing="5%" align="center" width="100%">
             <tr>
