--- a/pages/chisiamo.html
+++ b/pages/chisiamo.html
@@ -7,7 +7,8 @@
     <meta charset="UTF-8">
     <meta name='description' content='Sito Web per StartupYourLife'>
     <meta name='language' content='IT'>
-    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'> <!--Autori della pagina-->
+    <meta name='author' content='Davide Simone Angelo Fucci Mattia Malcangi Antonio Di Bari Antonio Balducci'>
+    <!--Autori della pagina-->
     <!--Titolo pagina-->
     <title>S.A.R.A.</title>
     <!---->
@@ -42,7 +43,7 @@
                     aria-expanded="false">
                     <i class="bi bi-person-circle" style="font-size:1.5em"></i> <!--iCONA DEL PROFILO-->
                 </a>
-                
+
             </div>
         </div>
     </header>
@@ -80,7 +81,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="card.html">La tua card</a>
                     </li>
-                 
+
                     <li class="nav-item">
                         <a class="nav-link" href="listacard.html">Le tue carte</a>
                     </li>
@@ -98,27 +99,38 @@
         </div>
     </nav>
     <div class="container">
-        <header>
-            <h1>Informazioni su UniCredit</h1>
-        </header>
+        <h1>Informazioni su UniCredit</h1>
         <section>
-            <h2>Storia</h2>
-            <p>UniCredit è uno dei più grandi gruppi bancari in Europa, nato nel 1998 dalla fusione di diverse banche italiane, tra cui Unicredito Italiano e Credito Italiano.</p>
-        </section>
-        <section>
-            <h2>Servizi</h2>
-            <p>UniCredit offre una vasta gamma di servizi finanziari, tra cui banca al dettaglio, banca aziendale e degli investimenti, gestione del patrimonio, assicurazioni e gestione del patrimonio.</p>
-        </section>
-        <section>
-            <h2>Rete</h2>
-            <p>UniCredit ha una vasta rete di filiali e sportelli bancomat in tutta Italia, rendendo i suoi servizi facilmente accessibili ai clienti in tutto il Paese.</p>
-        </section>
-        <section>
-            <h2>Innovazione</h2>
-            <p>UniCredit ha abbracciato l'innovazione digitale offrendo servizi di banca online e mobile, consentendo ai clienti di gestire i propri conti e accedere ai servizi finanziari a distanza.</p>
+            <article class="articolo">
+                <h2>Storia</h2>
+                <p>UniCredit è uno dei più grandi gruppi bancari in Europa, nato nel 1998 dalla fusione di diverse
+                    banche
+                    italiane, tra cui Unicredito Italiano e Credito Italiano.</p>
+            </article>
+            <article class="articolo">
+                <h2>Servizi</h2>
+                <p>UniCredit offre una vasta gamma di servizi finanziari, tra cui banca al dettaglio, banca aziendale e
+                    degli investimenti, gestione del patrimonio, assicurazioni e gestione del patrimonio.</p>
+            </article>
+
+            <article class="articolo">
+                <h2>Rete</h2>
+                <p>UniCredit ha una vasta rete di filiali e sportelli bancomat in tutta Italia, rendendo i suoi servizi
+                    facilmente accessibili ai clienti in tutto il Paese.</p>
+
+            </article>
+
+            <article class="articolo">
+                <h2>Innovazione</h2>
+                <p>UniCredit ha abbracciato l'innovazione digitale offrendo servizi di banca online e mobile,
+                    consentendo ai
+                    clienti di gestire i propri conti e accedere ai servizi finanziari a distanza.</p>
+            </article>
+
         </section>
         <footer>
-            <p>Per ulteriori informazioni su UniCredit, visita il <a href="https://www.unicredit.it/" target="_blank" rel="noopener noreferrer">sito web ufficiale</a>.</p>
+            <p>Per ulteriori informazioni su UniCredit, visita il <a href="https://www.unicredit.it/" target="_blank"
+                    rel="noopener noreferrer">sito web ufficiale</a>.</p>
         </footer>
     </div>
     <!--JQuery -->
