--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -108,12 +108,15 @@
     </nav>
 
     <main class="m-5" align="center">
+
         <p style="color: blue; font-size: 2.2vw" >
             Homepage
         </p>
 
-        <section>
-            <article class="articolo">
+        <iframe src="./immagini/Dashboard.mp4" style="height:22.5vw; width:40vw;"></iframe>
+
+        <section> 
+            <article class="articolo"> 
                 <p class="m-5">
                     Servizi avazati: S.A.R.A. si distingue per l'offerta di servizi avanzati nel campo del risparmio e
                     dell'assistenza,
