--- a/pages/card.html
+++ b/pages/card.html
@@ -99,7 +99,7 @@
             </div>
         </div>
     </nav>
-<h3 align="center">ECCO LA TUA CARD:</h3>
+<h3 align="center">SARA CARD:</h3>
 <div align="center">
     <img src="./immagini/Carta.png"  class="rounded mx-auto d-block" width=750px>
 </div>
