--- a/pages/conto.html
+++ b/pages/conto.html
@@ -23,8 +23,7 @@
 
 </head>
 
-<body onload="aggiorna()">
-    <!--Header-->
+<body onload="aggiorna()"> <!--quando la pagina viene caricata avvia la funzione aggiorna-->
     <!--Header-->
     <header class="p-2 border-bottom contaner bg-danger">
         <div class="container">
