--- a/pages/appmobile.html
+++ b/pages/appmobile.html
@@ -98,7 +98,7 @@
             </div>
         </div>
     </nav>
-    <h3 align="center" font color="blue"><b>Scarica l’applicazione SaraWallet</b></h3>
+    <h3 align="center" font color="blue">Scarica l’applicazione SaraWallet</h3>
     <div align="center"><img src="./immagini/logosara.jpeg" width="20%"></div><br/>
     <div class="d-flex flex-row justify-content-center gap-2">
         <a href="downloadapp.html" target="_self"> 
