--- a/pages/azioni/enel.html
+++ b/pages/azioni/enel.html
@@ -143,10 +143,17 @@
     </main>
 
     <script>
+        let azioniComprate
+        let azioniDisponibili
+        let costoAzione
+
         //inizializza valori
-        let azioniComprate = 0
-        let azioniDisponibili = 100
-        let costoAzione = 7
+        function aggiorna() {
+            azioniComprate = 0
+            azioniDisponibili = 100
+            costoAzione = 7
+        }
+        
         //funzione compra azione
         function compraAzione() {
             if (azioniDisponibili == 0) { //controllo su disponibilità azioni
@@ -168,15 +175,26 @@
                 bottone.classList.add("btn-outline-danger")
                 bottone.classList.remove("btn-outline-secondary")
             }
+            let conto = localStorage.getItem('contoSelezionato')
+            let saldo = localStorage.getItem('conto'+conto)
+            if(costoAzione>saldo){
+                alert("Saldo sul conto insufficiente")
+                return
+            }
+            saldo -= costoAzione
             //aggiornamento valori
-            azioniDisponibili-- 
+            azioniDisponibili--
             azioniComprate++
             costoAzione += 10
             //scrittura su pagina html
             document.getElementById('azioniDisponibiliId').innerHTML = azioniDisponibili
             document.getElementById('azioniComprateId').innerHTML = azioniComprate
-            document.getElementById('costoAzioneId').innerHTML = costoAzione + '&euro;'
-        }   
+            document.getElementById('costoAzioneId').innerHTML = costoAzione
+            localStorage.setItem('azioniDisponibili', azioniDisponibili)
+            localStorage.setItem('azioniComprate', azioniComprate)
+            localStorage.setItem('costoAzione', costoAzione)
+            localStorage.setItem('conto'+conto, saldo)
+        }
         //funzione vendi azione
         function vendiAzione() {
             if (azioniComprate == 0) {
@@ -198,8 +216,12 @@
             document.getElementById('azioniDisponibiliId').innerHTML = azioniDisponibili
             document.getElementById('azioniComprateId').innerHTML = azioniComprate
             document.getElementById('costoAzioneId').innerHTML = costoAzione + '&euro;'
+            localStorage.setItem('azioniDisponibili', azioniDisponibili)
+            localStorage.setItem('azioniComprate', azioniComprate)
+            localStorage.setItem('costoAzione', costoAzione)
         }
     </script>
+
 
 
     <!--Bootstrap Script-->
