--- a/pages/azioni/unicredit.html
+++ b/pages/azioni/unicredit.html
@@ -143,6 +143,85 @@
     </main>
 
     
+    <script>
+        let azioniComprate
+        let azioniDisponibili
+        let costoAzione
+
+        //inizializza valori
+        function aggiorna() {
+            azioniComprate = 0
+            azioniDisponibili = 100
+            costoAzione = 36
+        }
+        
+        //funzione compra azione
+        function compraAzione() {
+            if (azioniDisponibili == 0) { //controllo su disponibilità azioni
+                alert("Nessuna azione disponibile!")
+                let bottone = document.getElementById('compraAzioneBtn') //cambio di colore del bottone
+                bottone.disabled = true //disabilita bottone
+                bottone.classList.remove("btn-outline-success")
+                bottone.classList.add("btn-outline-secondary")
+                return
+            } else {
+                let bottone = document.getElementById('compraAzioneBtn')
+                bottone.disabled = false
+                bottone.classList.remove("btn-outline-secondary")
+                bottone.classList.add("btn-outline-success")
+            }
+            if (azioniComprate == 0) { //controllo su bottone già disabilitato per vendere azioni
+                let bottone = document.getElementById('vendiAzioneBtn')
+                bottone.disabled = false
+                bottone.classList.add("btn-outline-danger")
+                bottone.classList.remove("btn-outline-secondary")
+            }
+            let conto = localStorage.getItem('contoSelezionato')
+            let saldo = localStorage.getItem('conto'+conto)
+            if(costoAzione>saldo){
+                alert("Saldo sul conto insufficiente")
+                return
+            }
+            saldo -= costoAzione
+            //aggiornamento valori
+            azioniDisponibili--
+            azioniComprate++
+            costoAzione += 10
+            //scrittura su pagina html
+            document.getElementById('azioniDisponibiliId').innerHTML = azioniDisponibili
+            document.getElementById('azioniComprateId').innerHTML = azioniComprate
+            document.getElementById('costoAzioneId').innerHTML = costoAzione
+            localStorage.setItem('azioniDisponibili', azioniDisponibili)
+            localStorage.setItem('azioniComprate', azioniComprate)
+            localStorage.setItem('costoAzione', costoAzione)
+            localStorage.setItem('conto'+conto, saldo)
+        }
+        //funzione vendi azione
+        function vendiAzione() {
+            if (azioniComprate == 0) {
+                alert("Nessuna azione da vendere!")
+                let bottone = document.getElementById('vendiAzioneBtn')
+                bottone.disabled = true
+                bottone.classList.remove("btn-outline-danger")
+                bottone.classList.add("btn-outline-secondary")
+                return
+            } else {
+                let bottone = document.getElementById('vendiAzioneBtn')
+                bottone.disabled = false
+                bottone.classList.remove("btn-outline-secondary")
+                bottone.classList.add("btn-outline-danger")
+            }
+            azioniDisponibili++
+            azioniComprate--
+            costoAzione -= 10
+            document.getElementById('azioniDisponibiliId').innerHTML = azioniDisponibili
+            document.getElementById('azioniComprateId').innerHTML = azioniComprate
+            document.getElementById('costoAzioneId').innerHTML = costoAzione + '&euro;'
+            localStorage.setItem('azioniDisponibili', azioniDisponibili)
+            localStorage.setItem('azioniComprate', azioniComprate)
+            localStorage.setItem('costoAzione', costoAzione)
+        }
+    </script>
 
     <!--Bootstrap Script-->
 
