--- a/pages/downloadapp.html
+++ b/pages/downloadapp.html
@@ -97,9 +97,9 @@
         </div>
     </nav>
     
-    <div class="d-flex justify-content-center gap-4 m-3 mt-5">
+    <div class="d-flex justify-content-center gap-4 m-3 mt-5"> 
         <div class="spinner-border text-primary align-self-center" role="status">
-          <span class="sr-only"></span>
+          <span class="sr-only"></span> <!--span è un tag vuoto usato per gli elementi in line-->
         </div>
         <span class="display-4 text-primary">Download In Corso....</span>
     </div>
