--- a/pages/promozioni.html
+++ b/pages/promozioni.html
@@ -19,13 +19,7 @@
     <link rel="stylesheet" href="../style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        html,
-        body,
-        iframe {
-            height: 100%;
-        }
-    </style>
+ 
 
 
 </head>
@@ -107,7 +101,7 @@
     </nav>
     <main align="center">
 
-            <font align="center" color="#00ff7f" size="30%">Promozioni disponibili:</font><br/><br/>
+            <h3 style="align-self:center; color:#00ff7f">Promozioni disponibili:</h3>
     
            <table border="0" cellpadding="2%" cellspacing="5%" align="center" width="100%">
                 <tr>
